# lidar_clipper

./: CMakeLists.txt  README.md  package.xml
launch/: lidar_clipper.launch.py
src/: lidar_clipper_node.cpp  publish_pcd.cpp
